Bug 103726 - ftp directory listings not reflecting file changes on reload r=dougt, sr=darin