netwerk/protocol/ftp/src/nsFtpConnectionThread.h
@@ -159,6 +159,7 @@ private:
     nsresult SendFTPCommand(nsCString& command);
     nsresult BuildStreamConverter(nsIStreamListener** convertStreamListener);
     nsresult SetContentType();
+    PRBool CanReadEntry();
 
     ///////////////////////////////////
     // Private members
@@ -216,6 +217,8 @@ private:
     nsCOMPtr<nsIPrompt>    mPrompter;
     nsCOMPtr<nsIFTPEventSink>       mFTPEventSink;
     nsCOMPtr<nsIAuthPrompt> mAuthPrompter;
+    
+    static PRUint32         mSessionStartTime;
 
     char                   *mIPv6ServerAddress; // Server IPv6 address; null if server not IPv6
 
